fixed note spacing

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -110,6 +110,7 @@ h5 {
 #new-note {
   margin-bottom: 0;
   align-items:flex;
+  border: 2px;
 }
 
 .weekContainer {
@@ -135,6 +136,7 @@ h5 {
   padding-top: 6px;
   font-size: 30px;
 }
+
 
 /* styling for hover effect over the icons */
 .material-icons {
@@ -232,6 +234,8 @@ h5 {
   height: 55px;
   background-color: white;
   margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
 }
 #deleteNote {
